2001-03-20  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Usual Tools): Some about
	`touch'.
	From Jim Meyering, Volker Borchert, and Peter Eisentraut.

2001-03-20  Akim Demaille  <akim@epita.fr>

	* tests/foreign.at (Libtool): Don't skip 1.3.5.
	Invoke AC_CANONICAL_SYSTEM ---for some reason AC_CANONICAL_HOST is
	not enough for 1.3.5.
	From Lars J. Aas.

2001-03-20  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4: s/Testing suite/Test suite/g.
	From Jim.
	(AT_INIT): Adjust the error message on invalid options.
	* tests/foreign.at (Libtool): Skip Libtool 1.3 too.

2001-03-20  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi: A couple of grammatical tweaks.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump to 2.49e.

2001-03-19  Akim Demaille  <akim@epita.fr>

	Version 2.49d.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* tests/tools.at (AWK portability): Don't rely on `empty'.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_INIT): Fix the at_diff test.
	Reported by Nicolas Joly.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_PREPROC_IFELSE): Redirect stdout out of the
	_AC_EVAL_STDERR invocation to avoid `illegal io' on Ultrix.
	Reported by Harlan Stenn, and fixed by Jim Meyering.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Don't hard code
	`/bin/sh', use $SHELL.
	From Paul Eggert.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* acfunctions.m4 (AC_FUNC_STRERROR_R): Update to
	fileutils-4.0.42's.

2001-03-19  Akim Demaille  <akim@epita.fr>

	* tests/atgeneral.m4 (AT_INIT): Don't always create `empty', rather
	do it only when diffing `/dev/null' is not supported.
	And use `at-devnull' instead of `empty'.

2001-03-13  Akim Demaille  <akim@epita.fr>

	* autoscan.pl, autoupdate.in: Use `use' instead of `require' to
	require some version of Perl, so that the test is performed at
	compile time, not run time.
	Suggested by Nicolas Joly.
