@@ -1,4 +1,4 @@
-* Major changes in Autoconf 2.49d                       -*- outline -*-
+* Major changes in Autoconf 2.49e                       -*- outline -*-
 
 ** Lots of bug fixes
 Way too many for us to spell them out.  Check out ChangeLog if you
